# SynaesthetiQ-PuppetMaster

./: .gitignore  .gitmodules  README.md  setup.sh
src/: CMakeLists.txt  kilLED.cpp  main.cpp
src/Visualiser/: Visualiser.cpp  Visualiser.hpp
